--- a/HedgeModManager/Themes/LightTheme.xaml
+++ b/HedgeModManager/Themes/LightTheme.xaml
@@ -31,6 +31,9 @@
     <SolidColorBrush x:Key="HMM.Menu.HoverColor" Color="#FFEEEEEE"/>
     <SolidColorBrush x:Key="HMM.Menu.DisabledTextColor" Color="#FF858585"/>
 
+    <SolidColorBrush  x:Key="HMM.Common.Red" Color="#E00000"/>
+    <SolidColorBrush  x:Key="HMM.Common.Green" Color="#008B00"/>
+
     <SolidColorBrush  x:Key="HMM.PressedBrush" Color="{DynamicResource HMM.Button.PressedColor}"/>
     <DropShadowEffect x:Key="HoverEffect" BlurRadius="5" Color="#FF8ED0F9" Opacity="0" Direction="0" ShadowDepth="0"/>
 
