--- a/HedgeModManager/UI/MainWindow.xaml
+++ b/HedgeModManager/UI/MainWindow.xaml
@@ -11,9 +11,10 @@
         MinHeight="620" MinWidth="560" Height="620" Width="560" WindowStartupLocation="CenterScreen" Style="{StaticResource HedgeWindow}">
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
-        <local:ModUpdateStatusConverter x:Key="ModUpdateStatusConverter"/>
         <local:BoolToYesNoConverter x:Key="BoolToYesNoConverter"/>
         <local:BoolToBrushConverter x:Key="BoolToBrushConverter"/>
+        <local:ModUpdateToBrushConverter x:Key="ModUpdateToBrushConverter"/>
+        <local:ModUpdateToDetailsConverter x:Key="ModUpdateToDetailsConverter"/>
         <ContextMenu x:Key="ModContextMenu">
             <MenuItem Header="{DynamicResource ModsUIModDescription}" Click="UI_Description_Click" InputGestureText="(Ctrl+D)"/>
             <MenuItem Header="{DynamicResource ModsUIModFavorite}" Click="UI_Favorite_Click" InputGestureText="(Alt+F)"/>
@@ -80,8 +81,21 @@
                                                             </Border>
                                                         </Border>
                                                         <Border ToolTip="{DynamicResource ModsUIFeatureUpdateDisable}">
-                                                            <Border Background="#00000000" ToolTip="{DynamicResource ModsUIFeatureUpdate}" IsEnabled="{Binding HasUpdates}"  Tag="{Binding}" PreviewMouseDown="UI_ModFeatureUpdate_PreviewMouseDown">
-                                                                <Path Data="{StaticResource RefreshGeometry}" Fill="{Binding HasUpdates, Converter={StaticResource BoolToBrushConverter}, ConverterParameter=HMM.Button.ForegroundBrush}" Margin="0,0,4,0"/>
+                                                            <Border Background="#00000000" Tag="{Binding}" PreviewMouseDown="UI_ModFeatureUpdate_PreviewMouseDown">
+                                                                <Border.ToolTip>
+                                                                    <MultiBinding Converter="{StaticResource ModUpdateToDetailsConverter}">
+                                                                        <Binding />
+                                                                        <Binding Path="UpdateStatus"/>
+                                                                    </MultiBinding>
+                                                                </Border.ToolTip>
+                                                                <Path Data="{StaticResource RefreshGeometry}" Margin="0,0,4,0">
+                                                                    <Path.Fill>
+                                                                        <MultiBinding Converter="{StaticResource ModUpdateToBrushConverter}">
+                                                                            <Binding />
+                                                                            <Binding Path="UpdateStatus"/>
+                                                                        </MultiBinding>
+                                                                    </Path.Fill>
+                                                                </Path>
                                                             </Border>
                                                         </Border>
                                                         <Border ToolTip="{DynamicResource ModsUIFeatureSaveDisable}">
