--- a/HedgeModManager/UI/MainWindow.xaml
+++ b/HedgeModManager/UI/MainWindow.xaml
@@ -34,7 +34,7 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <TextBlock x:Name="StatusLbl" Margin="175,2,4,4" FontSize="12" TextAlignment="Right" HorizontalAlignment="Stretch" VerticalAlignment="Top"/>
-                <TabControl x:Name="MainTabControl" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Transparent" Margin="-2,0,-2,0">
+                <TabControl x:Name="MainTabControl" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Transparent" Margin="-2,0,-2,0" SelectionChanged="MainTabControl_SelectionChanged">
                     <TabItem x:Name="ModsTab" Header="{DynamicResource MainUIMods}">
                         <Grid>
                             <ListView x:Name="ModsList" PreviewKeyDown="ModsList_OnPreviewKeyDown" SelectionChanged="UI_ModsList_SelectionChanged"
@@ -174,7 +174,7 @@
                         </Grid>
                     </TabItem>
 
-                    <TabItem Header="{DynamicResource MainUISettings}" Margin="2,0,-2,0">
+                    <TabItem x:Name="SettingsTab" Header="{DynamicResource MainUISettings}" Margin="2,0,-2,0">
                         <Grid Margin="10,5,10,0">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="230"/>
@@ -252,7 +252,7 @@
 
                         <Button x:Name="SaveButton"     Content="{DynamicResource MainUISave}"                        Grid.Column="0" Grid.Row="1" Margin="5" Click="UI_Save_Click"/>
                         <Button x:Name="SavePlayButton" Content="{DynamicResource MainUISaveAndPlay}"    Width="Auto" Grid.Column="1" Grid.Row="1" Margin="5" Click="UI_SaveAndPlay_Click"/>
-                        <Button Content="{DynamicResource MainUIRefreshModList}" Width="Auto" Grid.Column="2" Grid.Row="1" Margin="5" Click="UI_Refresh_Click"/>
+                        <Button x:Name="RefreshButton"  Content="{DynamicResource MainUIRefreshModList}" Width="Auto" Grid.Column="2" Grid.Row="1" Margin="5" Click="UI_Refresh_Click"/>
                     </Grid>
                 </StackPanel>
             </Grid>
